# OOP_Banking_Project

./: .gitignore  BankingSystem  CMakeLists.txt  README.md
include/: Account.h  Admin.h  Bank.h  CheckingAccount.h  Client.h  Loan.h  Person.h  SavingsAccount.h  Transaction.h
src/: Account.cpp  Admin.cpp  Bank.cpp  CheckingAccount.cpp  Client.cpp  Loan.cpp  Person.cpp  SavingsAccount.cpp  Transaction.cpp  main.cpp
